--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "local": "vercel dev"
+    "local": "vercel dev",
+    "worker": "wrangler dev",
+    "deploy": "wrangler deploy",
+    "postinstall": "node scripts/colo.mjs"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
@@ -25,6 +28,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240925.0",
     "@hookform/resolvers": "^3.3.2",
     "@iconify-json/ant-design": "^1.1.13",
     "@iconify-json/devicon": "^1.1.33",
@@ -50,6 +54,8 @@
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "*",
-    "vercel": "^32.4.1"
-  }
+    "vercel": "^32.4.1",
+    "wrangler": "^3.78.10"
+  },
+  "packageManager": "pnpm@9.9.0"
 }
