feat: enhance region-specific DNS query handling
Refactor DNS region configuration to dynamically switch between Cloudflare and Vercel regions based on the deployment environment. This ensures optimal performance and compatibility by leveraging the appropriate provider's capabilities. Additionally, update request headers and proxy logic to better align with Cloudflare's worker-based DNS querying, improving request handling and response accuracy.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "std-env": "^3.7.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
