--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,4 +4,7 @@ compatibility_date = "2024-09-28"
 
 workers_dev = false
 
+[limits]
+cpu_ms = 10
+
 # nr deploy --var "CORS_ORIGIN:dns.surf" "WORKER_HOST:dns.html.zone"
