--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,4 +7,8 @@ workers_dev = false
 [limits]
 cpu_ms = 10
 
+# prod
 # nr deploy --var "CORS_ORIGIN:dns.surf" "WORKER_HOST:dns.html.zone"
+
+# preview
+# nr deploy --name dns-surf-preview --var "CORS_ORIGIN:pages.dev" "WORKER_HOST:dns-preview.html.zone"
