--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "dns.surf",
+  "version": "0.2.0",
+  "private": true,
   "packageManager": "pnpm@9.9.0",
   "scripts": {
     "dev": "next dev",
