chore: update Cloudflare IP and script imports
- Corrected the IP address for a specific Cloudflare region to reflect the latest configuration.
- Fixed the import path in a script to correctly reference the Cloudflare configuration file.
- Adjusted the locale setting in a script to use 'en-US' for region display names.
- Updated a Vercel configuration to correct the destination URL for a specific route.

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     },
     {
       "source": "/FKYHsnzM/:match*",
-      "destination": "https://dns.surf/_vercel/insights/:match*"
+      "destination": "https://vercel.dns.surf/_vercel/insights/:match*"
     }
   ]
 }
