--- a/.github/workflows/monitor.yaml
+++ b/.github/workflows/monitor.yaml
@@ -25,6 +25,8 @@ jobs:
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
 
+      - run: touch .env
+
       - run: pnpm run monitor
         env:
           WORKER_HOST: ${{ env.WORKER_HOST }}
