--- a/.github/workflows/monitor.yaml
+++ b/.github/workflows/monitor.yaml
@@ -10,14 +10,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
     steps:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
           fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: .node-version
 
       - uses: pnpm/action-setup@v4
         with:
