feat: add environment variable for worker host in monitor workflow
To facilitate dynamic configuration of the worker host during monitoring, an environment variable was introduced in the GitHub Actions workflow. This enhancement allows for more flexible and scalable monitoring setups.

--- a/.github/workflows/monitor.yaml
+++ b/.github/workflows/monitor.yaml
@@ -27,3 +27,5 @@ jobs:
               args: [--frozen-lockfile, --strict-peer-dependencies]
 
       - run: pnpm run monitor
+        env:
+          WORKER_HOST: ${{ env.WORKER_HOST }}
