fix: use vars context for environment variable in workflow
Switch to `vars` context for `WORKER_HOST` to align with GitHub Actions best practices and improve clarity in environment variable management.

--- a/.github/workflows/monitor.yaml
+++ b/.github/workflows/monitor.yaml
@@ -28,4 +28,4 @@ jobs:
 
       - run: pnpm run monitor
         env:
-          WORKER_HOST: ${{ env.WORKER_HOST }}
+          WORKER_HOST: ${{ vars.WORKER_HOST }}
