feat: add map view and tabs to DNS panel
This commit introduces a map view alongside the existing table view in the DNS panel, enhancing user experience by providing multiple visual representations of DNS data. It also updates dependencies to include new Radix UI components and other libraries necessary for the new features.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@unovis/react": "1.4.3-beta.0",
+    "@unovis/ts": "1.4.3-beta.0",
     "buffer": "^6.0.3",
     "dohjs": "^0.3.3",
     "is-valid-domain": "^0.1.6",
