chore(workflow): update monitor workflow to scheduled task
Remove push trigger and rename workflow for clarity, focusing on scheduled monitoring.

--- a/.github/workflows/monitor.yaml
+++ b/.github/workflows/monitor.yaml
@@ -1,8 +1,8 @@
-name: Monitor Worker Regions
+name: Worker Regions Monitor
 
 on:
-  push:
-    branches: [master]
+  # push:
+  #   branches: [master]
   schedule:
     - cron: '22 22 * * *'
   workflow_dispatch:
