feat: enhance DNS map interaction and refactor DNS result display
Refactor DNS map component to improve user interaction with tooltips and dynamic region updates. Simplify DNS result rendering by extracting complex logic into utility functions, enhancing code readability and maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     },
     "resolveJsonModule": true,
     "allowJs": true,
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
     "isolatedModules": true,
