feat: enhance DNS tooltip and form responsiveness
Refactored DNS tooltip to ensure data consistency by validating region IDs before updating state. Improved form responsiveness by dynamically setting default tabs based on screen size, enhancing mobile user experience. Consolidated imports for better readability and maintainability.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "@unovis/react": "1.4.3-beta.0",
     "@unovis/ts": "1.4.3-beta.0",
     "buffer": "^6.0.3",
