--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-intersection-observer": "^9.13.1",
+    "undici": "^6.20.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
